Cleaned return type Removed magic variables fixed step size